feat: add optimistic concurrency for transactions patch requests
